Fix left nav card spacing issue

--- a/assets/_src/sass/components/_pager.scss
+++ b/assets/_src/sass/components/_pager.scss
@@ -54,7 +54,7 @@
 
 	&-arrow--left {
 		align-self: center;
-		margin-right: auto;
+		margin-right: 0.2rem;
 	}
 
 	&-arrow--right {
@@ -82,10 +82,6 @@
 @media screen and (max-width: 769px) {
 	.pager {
 		margin: 2rem auto 2.5rem;
-
-		// &-link-next {
-		// 	justify-content: flex-end;
-		// }
 
 		&-previous {
 			flex-basis: 48%;
